fix width on mobile main-image__text-top

--- a/sass/layout/_homepage.scss
+++ b/sass/layout/_homepage.scss
@@ -91,7 +91,7 @@
     @include respond(phone-small) {
       line-height: 4rem;
       font-size: 2.3rem;
-      width: 85vw;
+      width: 72vw;
     }
 
     &-right {
